# tezos

./: .gitignore  .gitlab-ci.yml  Makefile
.gitlab/ci/: integration.yml  opam.yml  unittest.yml
docs/: index.rst
docs/developer/: error_monad.rst
docs/doc_gen/: dune
docs/shell/: bootstrapper.rst  consensus_heuristic.rst  storage.rst  sync.rst  the_big_picture.rst  validation.rst
docs/user/: history_modes.rst
docs/whitedoc/: michelson.rst
scripts/: version.sh
src/bin_client/: dune
src/bin_node/: dune  node_config_file.ml  node_config_file.mli  node_data_version.ml  node_run_command.ml  node_shared_arg.ml  node_shared_arg.mli  node_snapshot_command.ml  node_storage_command.ml
src/bin_validation/: validator.ml
src/lib_base/: block_locator.ml  block_locator.mli
src/lib_client_commands/: client_admin_commands.ml
src/lib_context/: context.ml  context.mli  context_dump.ml  context_dump.mli  context_dump_intf.ml  dune  tezos-context.opam
src/lib_protocol_environment/: environment_context_intf.ml  memory_context.ml  tezos-protocol-environment.opam
src/lib_proxy/: proxy.ml  proxy_getter.ml  proxy_getter.mli
src/lib_shell/: block_directory.ml  block_validator.ml  block_validator.mli  block_validator_process.ml  block_validator_process.mli  bootstrap_pipeline.ml  bootstrap_pipeline.mli  bootstrapper.ml  bootstrapper.mli  bootstrapper_configuration.ml  bootstrapper_configuration.mli  chain_directory.ml  chain_validator.ml  chain_validator.mli  chain_validator_event.ml  (+26 more)
src/proto_006_PsCARTHA/bin_get_contracts/: dune  dune-project  get_contracts.ml
(+92 files in other folders)
