(executable
 (name get_contracts)
 (public_name tezos-get-contracts)
 (libraries tezos-client-base-unix
            tezos-protocol-006-PsCARTHA
            tezos-client-006-PsCARTHA
            tezos-shell
            tezos-shell-context
            tezos-storage)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_006_PsCARTHA
                   -open Tezos_client_006_PsCARTHA
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
